--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <h2>hello angular</h2>
 <h3>this is first project through git and feeling exited to explore new things in the coming days</h3>
 <p>smile</p>
-<h>hello</h>
+<h1>hello</h1>
