--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,3 +2,4 @@
 <h3>this is first project through git and feeling exited to explore new things in the coming days</h3>
 <p>smile</p>
 <h1>hello</h1>
+<p>tejasree</p>
